# parakeet-transcribe

./: .gitignore  Cargo.toml  transcribe-with-timestamps.bat
.github/workflows/: build.yml
parakeet-rs-fork/: Cargo.toml  README.md
parakeet-rs-fork/examples/: diarization.rs  raw.rs  streaming.rs  transcribe.rs
parakeet-rs-fork/src/: decoder_tdt.rs  execution.rs  lib.rs  model_eou.rs  model_tdt.rs  parakeet.rs  parakeet_eou.rs  parakeet_tdt.rs  sortformer.rs  timestamps.rs  vocab.rs
src/: main.rs
