[package]
name = "parakeet-transcribe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parakeet-transcribe"
path = "src/main.rs"

[dependencies]
parakeet-rs = "0.2.6"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
hf-hub = "0.4"
dirs = "5.0"

# Native audio decoding (replaces ffmpeg)
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"

# copy to clipboard
arboard = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
